--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -1,15 +1,15 @@
 ## binary output path
 if (NOT EXECUTABLE_OUTPUT_PATH)
-    set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/target/bin/${CMAKE_BUILD_TYPE})
+    set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/target/bin/${CMAKE_BUILD_TYPE})
 endif()
 message(STATUS "[main] EXECUTABLE_OUTPUT_PATH = " ${EXECUTABLE_OUTPUT_PATH})
 
 ## collect src
 message(STATUS "[main] aux_source_directory")
-aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/src/ mySRC)
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/src mySRC)
 
 ## add binary
-set(myAPP "hello-cmake")
+set(myAPP ${my_prj_name})
 add_executable(${myAPP} ${mySRC})
 
 ## include
@@ -18,7 +18,7 @@ target_include_directories( ${myAPP} PRIVATE
 )
 
 ## linking
-target_link_libraries(${myAPP} PRIVATE say-hello say-fuck cyl-logger)
+target_link_libraries(${myAPP} PRIVATE sayhello sayfuck logger)
 
 ## install
 my_install(${myAPP})
